[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pytka"
version = "0.0.0"
description = "Simple pytka."
authors = [{ name = "myslak71", email = "myslak@protonmail.com" }]
maintainers = [{ name = "myslak71", email = "myslak@protonmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = [
  "pytka"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
urls = { repository = "https://github.com/myslak71/pytka" }